fix(Modal): z-index

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,5 +1,4 @@
 .modal {
-  z-index: -1;
   left: 0;
   top: 0;
   width: 100%;
@@ -7,12 +6,14 @@
 
   &[data-position="fixed"] {
     position: fixed;
+    z-index: 1000;
 
     .body {
       top: 6.5rem;
       left: 50%;
-      transform: translate(-50%, -100%);
-      padding: 4.5rem 1.5rem 1.75rem;
+      padding: 3rem 1.5rem 1.75rem;
+      position: fixed;
+      animation: slidein-fixed .5s ease forwards;
     }
 
     .close {
@@ -25,9 +26,11 @@
 
   &[data-position="relative"] {
     position: absolute;
+    z-index: 1002;
 
     .body {
-      transform: translate(0, -100%);
+      position: absolute;
+      animation: slidein-relative .5s ease;
       padding: 2rem;
     }
 
@@ -40,41 +43,21 @@
     }
   }
 
-  &[data-visible="true"] {
-    .body {
-      height: unset;
-      width: unset;
-      opacity: 1;
-      z-index: 1003;
-      transition: transform 500ms cubic-bezier(0, 0, 0.25, 1), opacity 500ms cubic-bezier(0, 0, 0.25, 1);
+  &[data-animated="true"] {
+    &[data-position="fixed"] .body {
+      animation: slideout-fixed .5s ease forwards;
     }
 
-    &[data-position="fixed"] {
-      z-index: 1000;
-
-      .body {
-        transform: translate(-50%, 0);
-      }
-    }
-
-    &[data-position="relative"] {
-      z-index: 1002;
-
-      .body {
-        transform: translate(0, 0);
-      }
+    &[data-position="relative"] .body {
+      animation: slideout-relative .5s ease forwards;
     }
   }
 
   .body {
-    height: 0;
-    width: 0;
-    position: absolute;
     background: #fff;
     border-radius: 8px;
     box-sizing: border-box;
-    opacity: 0;
-    z-index: -1;
+    z-index: 1003;
   }
 
   .iconContainer {
@@ -110,5 +93,44 @@
 
   &[data-visible="true"] {
     display: block;
+  }
+}
+
+@keyframes slidein-fixed {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -100%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes slideout-fixed {
+  from {
+    transform: translate(-50%, 0);
+  }
+  to {
+    opacity: 0;
+    transform: translate(-50%, 100%);
+  }
+}
+
+@keyframes slidein-relative {
+  from {
+    opacity: 0;
+    transform: translate(0, -100%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes slideout-relative {
+  to {
+    opacity: 0;
+    transform: translate(0, 100%);
   }
 }
